kantin-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-kantin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-api
          image: rasarasanya/kantin-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          env: # Identity Injection
            - name: NAMA_PRAKTIKAN
              value: "Rafi Ahmad Al Farisi"
            - name: NIM_PRAKTIKAN
              value: "2409829"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
